--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "author": "High Cleaning",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemailer": "^6.9.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "cors": "^2.8.5"
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "nodemailer": "^6.9.7"
   }
 }
